<resources>
    <string name="app_name">WareHouseApp</string>
    <string name="action_settings">Settings</string>
    <string name="version_name">WareHouseApp 1.0</string>
    <string name="version_type">DebugMode</string>
    <!--<string name="version_type">ReleaseMode</string>-->

    <string name="add_side_mark">Add Sidemark</string>


    <!--C-->
    <string name="classic">CLASSIC</string>
    <string name="cust_name">Customer Name - Arjun</string>
    <string name="csr_name">CSR Name - John</string>
    <string name="customer_search">Customer Search</string>


    <!--D-->
    <string name="date">Date</string>
    <string name="end_date">End Date - 06/12/2016</string>

    <!--E-->
    <string name="email">Email</string>

    <!--J-->

    <!--L-->
    <string name="sign_in">LOGIN</string>

    <!--M-->
    <string name="app_lable">Moving..Storage..Delivery</string>

    <!--P-->
    <string name="ph_no">Ph.No</string>
    <string name="pwd">Password</string>

    <!--S-->
    <string name="side_mark">Sidemark - Nancy</string>

    <string name="start_date">Start Date - 05/12/2016</string>

    <!--U-->
    <string name="user_name">User name</string>
    <string name="unsynced_Orders">Unsynced Orders</string>


    <!---->

    <!--sidescreen-->
    <string name="smarkname">Smark Name - </string>
    <string name="pricing">Pricing - </string>
    <string name="storagevalu">Storage Valu - </string>
    <string name="storagetype">Storage Type - </string>
    <string name="transitvalue">Transit Value - </string>
    <string name="sidemark">Sidemark</string>

    <string name="valuation">valuation</string>
    <string name="Storagetype">Storage Type</string>
    <string name="defaultpricing">Default Pricing</string>
    <string name="doc">Documentation:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="add">+ Add</string>
    <string name="carriers">Carriers</string>


    <string name="CUSTOMER">CUSTOMER</string>
    <string name="SIDEMARK">SIDEMARK</string>
    <string name="ORIGIN">ORIGIN</string>
    <string name="CARRIER">CARRIER</string>
    <string name="ITEMS">ITEMS</string>
    <string name="searchcutomer">Search Customer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="contact_no">Contact No</string>

    <string name="location">Location</string>
    <string name="company_no">Company Number</string>
    <string name="moblienumber">Moblie Number</string>
    <string name="address">Address</string>
    <string name="zipcode">zipcode</string>
    <string name="city">city</string>
    <string name="state">State</string>
    <string name="copytoorigin">Copy to Origin</string>
    <string name="continu">continue</string>
    <string name="submit">SUBMIT</string>
    <string name="customernumber">Customer Number - 1111111</string>
    <string name="City">City - Los Angels</string>
    <string name="companynamewithhipen">Company Name - ABC Pvt Ltd</string>
    <string name="State"> State - California</string>
</resources>
