<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    android:id="@+id/orgininsertvalue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/white"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <EditText
            android:id="@+id/ed_search_origin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Search_Origin"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_normal"/>

        <ImageView
            android:id="@+id/iv_search_origin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@null"
            android:layout_alignParentRight="true"
            android:src="@android:mipmap/sym_def_app_icon"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_firstname"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_lastname"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_moblienumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_companyname"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_moblienmuber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/moblienumber"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_moblienumber"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_address"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_zipcode"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_city"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"

                />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


</LinearLayout>
