<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@null"
            android:padding="7dp"
            android:src="@drawable/arrow" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@null"
            android:padding="7dp"
            android:src="@drawable/app_logo" />


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsynced_Orders"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="15dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sidemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tv_sidemark"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/sidemark"
                android:imeOptions="actionDone"
                android:textSize="@dimen/text_normal" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/Ll_spinner_valuation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_layout_sidemark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Valuation"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/text_normal" />

            <CheckBox
                android:id="@+id/checkbox_Transit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="50dp"
                android:onClick="onCheckboxClicked"
                android:text="Transit value" />


            <CheckBox
                android:id="@+id/checkbox_Storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="Storage value" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/Ll_spinner_storagetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ll_spinner_valuation"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spn_storage_type"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:prompt="@string/Storagetype"
                android:textSize="@dimen/text_normal" />

            <!--<ImageView-->
            <!--android:id="@+id/iv_sidearrow"-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--app:srcCompat="@drawable/dropdown"-->

            <!--/>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2dp"
                android:layout_below="@+id/spn_storage_type"
                android:background="@color/view_line" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/Ll_spinner_defaultpricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ll_spinner_storagetype">

            <Spinner
                android:id="@+id/spn_default_pricing"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:gravity="bottom"
                android:prompt="@string/defaultpricing"
                android:textSize="@dimen/text_normal">

            </Spinner>

            <!--<ImageView-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--app:srcCompat="@drawable/dropdown"-->

            <!--/>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2dp"
                android:layout_below="@+id/spn_default_pricing"
                android:background="@color/view_line" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tv_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ll_spinner_defaultpricing"
            android:layout_marginTop="20dp"
            android:text="@string/doc"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/ed_decumentcontent"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/tv_document"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_rect_box"
            android:gravity="left|start"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="5dp"
            android:textSize="@dimen/text_normal" />


        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_decumentcontent"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/ed_notecontent"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/tv_note"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_rect_box"
            android:gravity="left|start"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="20dp"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ed_notecontent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>
</RelativeLayout>