<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--author : Parthi-->

    <RelativeLayout
        android:id="@+id/img_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_img_panel"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/splash_img_width"
                    android:layout_height="@dimen/splash_img_width"
                    android:contentDescription="@null"
                    android:src="@drawable/app_logo" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/splash_margin_left"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/txt_classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/classic"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/splash_large_font" />

                <TextView
                    android:id="@+id/txt_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/app_lable"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_large"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_panel"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin">

        <!--<TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/_app_name"
            android:textColor="@color/inventry_blue"
            android:textSize="@dimen/text_extra_large"
            android:textStyle="bold" />-->


        <LinearLayout
            android:id="@+id/edit_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    tools:ignore="UselessParent">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_text_input_lyt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:theme="@style/TextLabel"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/username_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/user_name"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:textSize="@dimen/text_normal"
                            android:textColorHint="@color/hint_grey"/>

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

            </RelativeLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_grey" />

            <RelativeLayout
                android:id="@+id/pwd_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/pwd_avatar_img"
                    android:theme="@style/TextLabel"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/pwd_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/pwd"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColorHint="@color/hint_grey"
                        android:textSize="@dimen/text_normal" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/pwd_avatar_img"
                    android:layout_width="@dimen/notification"
                    android:layout_height="@dimen/notification"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />


            </RelativeLayout>

            <View
                android:id="@+id/pwd_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_grey"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_lyt"
            android:layout_marginTop="85dp"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/login_btn_lyt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edged_btn_background"
                android:gravity="center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal" />

            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>