<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="10dp">


        <EditText
            android:id="@+id/ed_search_carrier"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Search_carrier"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_normal" />

        <ImageView
            android:id="@+id/iv_search_carrier"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/search" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_carriername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_carriers_namename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carriers" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_freightbillno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_carriername"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_freightbillno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/Ll_fright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_freightbillno"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="100dp"
                android:text="Freights (s)"
                android:textSize="@dimen/text_normal" />

            <RadioGroup
                android:id="@+id/radio_valuation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_transitvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="100dp"
                    android:text="prepaid" />

                <RadioButton
                    android:id="@+id/radio_storagevalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="collect" />

            </RadioGroup>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ll_fright"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/moblienumber" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_amount"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="weight" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</LinearLayout>
